Cesar Huber - inclusão estilização seção produtos

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 200;
 }
 
-element {
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+:root {
     --AMARELO:#E6AF2E ;
     --MARROM:#50260F ;
     --VERDE:#001514 ;
@@ -33,8 +43,86 @@ body {
 
 /* CONTAINER PRODUTOS */
 
+.section-produtos {
+    display: grid;
+    border: 2px solid red;
+    grid-template-rows: 40px 1fr;
+    grid-gap: minmax(10px, 15px);
+}
+
+.header-produtos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.titulo-header {
+    padding-left: 10px;
+    border-bottom: var(--NUDE);
+}
+
+.titulo-header h1 {
+    font-size: calc(20px + 8 * ((100vw - 300px) / (1600 - 300)));
+    color: var(--AMARELO);
+}
+
+.container-setinha {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10px;
+}
+
+.header-produtos img {
+    height: 100%;
+}
+
+.container-produtos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.container-card {
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
+}
+
+.container-imagem {
+    display: flex;
+    justify-content: center;
+}
+
+.container-imagem img {
+    min-width: 150px;
+    max-width: 20vw;
+}
+
+.titulo-comida {
+    padding: 2px 7px;
+    color: var(--VERDE);
+    font-size: calc(14px + 6 * ((100vw - 300px) / (1600 - 300)))
+}
+
+.container-peso-preco {
+    padding: 2px 7px;
+    display: flex;
+    justify-content: space-between;
+    font-size: calc(12px + 4 * ((100vw - 300px) / (1600 - 300)))
+}
+
+.container-peso-preco p {
+    margin: 0 4px;
+}
+
 #button {
-    width: 5%;
+    align-self: center;
+    margin: 3px 10px;
+    width: 50%;
+    height: 20px;
+    color: var(--BRANCO);
     background-color: var(--AMARELO);
     border: none;
 }
