--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,66 @@ body {
     background-color: var(--AMARELO);
     border: none;
 }
+
+/* FOOTER */
+
+footer{
+    display: flex;
+    background-color: var(--NUDE);
+    justify-content: space-around;
+    
+}
+
+.container-redes{
+    display: flex;
+    flex-direction: column;
+    margin-top: 3vh;
+    color: var(--VERDE);
+}
+
+.container-redes>h3{
+    padding-bottom: 2vh;
+}
+
+.container-atendimento{
+    margin-top: 3vh;
+    color: var(--VERDE);
+}
+
+.container-atendimento>h3{
+    padding-bottom: 2vh;
+}
+
+.container-atendimento>p{
+    padding-bottom: 2vh;
+    text-decoration: underline var(--VERDE)
+}
+    
+
+.container-form{
+    display: flex;
+    flex-direction: column;
+    margin-top: 3vh;
+    color: var(--VERDE);
+}
+
+.container-form>h3{
+    padding-bottom: 1vh;
+}
+
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.formulario>button{
+    margin-top: 1vh;
+    color: var(--VERDE)
+}
+
+.formulario>button:hover{
+    background-color: var(--AMARELO);
+    color: var(--BRANCO);
+}
