--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ section {
 
 body {
     display: grid;
-    grid-template-rows: 60px 1fr 300px ;
+    grid-template-rows: 60px 1fr 200px ;
 }
 
 /* HEADER */
@@ -141,14 +141,14 @@ body {
 .titulo-comida {
     padding: 2px 7px;
     color: var(--VERDE);
-    font-size: calc(14px + 6 * ((100vw - 300px) / (1600 - 300)))
+    font-size: calc(14px + 6 * ((100vw - 300px) / (1600 - 300)));
 }
 
 .container-peso-preco {
     padding: 2px 7px;
     display: flex;
     justify-content: space-between;
-    font-size: calc(12px + 4 * ((100vw - 300px) / (1600 - 300)))
+    font-size: calc(12px + 4 * ((100vw - 300px) / (1600 - 300)));
 }
 
 .container-peso-preco p {
@@ -174,19 +174,36 @@ footer{
 }
 
 .container-redes{
+    display: grid;
+    grid-template-rows: 25px calc(100% - 2vh - 25px);
+    margin-top: 2vh;
+    width: 30%;
+    color: var(--BRANCO);
+}
+
+.container-logo-redes {
     display: flex;
-    flex-direction: column;
-    margin-top: 3vh;
-    color: var(--VERDE);
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-left: 1vw;
+    margin-top: 2vh;
 }
 
 .container-redes>h3{
+    margin-left: 1vw;
     padding-bottom: 2vh;
 }
 
 .container-atendimento{
-    margin-top: 3vh;
-    color: var(--VERDE);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    margin-top: 2vh;
+    margin-left: 1vw;
+    width: 20%;
+    color: var(--BRANCO);
+    font-size: calc(12px + 6 * ((100vw - 300px) / (1600 - 300)))
 }
 
 .container-atendimento>h3{
@@ -195,32 +212,77 @@ footer{
 
 .container-atendimento>p{
     padding-bottom: 2vh;
-    text-decoration: underline var(--VERDE)
+    text-decoration: underline var(--BRANCO)
 }
 
 .container-form{
-    display: flex;
-    flex-direction: column;
-    margin-top: 3vh;
-    color: var(--VERDE);
+    /* display: flex;
+    flex-direction: column; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 25px calc(100% - 25px - 3vh);
+    margin-top: 2vh;
+    width: 50%;
+    color: var(--BRANCO);
 }
 
 .container-form>h3{
     padding-bottom: 1vh;
 }
 
-.formulario{
+/* .formulario{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+} */
+
+.header-form {
+    grid-row: 1;
+    grid-column: 1 / -1;
+    justify-content: start;
 }
 
-.formulario>button{
+.formulario-parte1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-row: 2;
+    grid-column: 1;
+}
+
+.container-form1 {
+    display: flex;
+    flex-direction: column;
     margin-top: 1vh;
-    color: var(--VERDE)
 }
 
-.formulario>button:hover{
+#label-email {
+    margin-top: 1vh;
+}
+
+.formulario-parte2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-row: 2;
+    grid-column: 2;
+    margin-right: 2vw;
+}
+
+.container-form2 {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1vh;
+}
+
+#button-form {
+    margin-top: 1vh;
+    color: var(--VERDE);
+    width: 100px;
+    border-radius: 3px;
+}
+
+#button-form:hover{
     background-color: var(--AMARELO);
     color: var(--BRANCO);
 }
