--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,7 @@ footer{
 .container-redes{
     display: grid;
     grid-template-rows: 25px calc(100% - 2vh - 25px);
-    margin-top: 2vh;
+    margin-top: 2vw;
     width: 30%;
     color: var(--BRANCO);
 }
@@ -287,7 +287,7 @@ footer{
     justify-content: space-around;
     flex-wrap: wrap;
     margin-left: 1vw;
-    margin-top: 2vh;
+    margin-top: 2vw;
 }
 
 .container-redes>h3{
@@ -300,7 +300,7 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 2vh;
+    margin-top: 2vw;
     margin-left: 5vw;
     width: 20%;
     color: var(--BRANCO);
@@ -414,67 +414,174 @@ footer{
 
 /* @MEDIA RESPONSIVIDADE */
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 740px){
     body {
         display: grid;
-        grid-template-rows: 60px 1fr 450px ;
+        grid-template-rows: 60px 1fr 600px;
+        max-width: 100vw;
     }
-    .container-form {
-        margin-left: 20vw;
-        width: 100%;
-        display: flex;
-        flex-Direction: column;
-        align-Items: flex-start;
-        justify-Content: space-around;
-        width: 100%;
+
+   /* FOOTER */
+
+    footer{ 
+        display: grid;
+        grid-template-rows: 85% 15%;
+    }
+
+    .linha1 {
+        grid-row: 1;
+        display: grid;
+        place-items: center;
+        grid-template-rows: repeat(20px, 1fr);
+        background-color: var(--NUDE);
+    }
+
+    .container-redes{
+        grid-row: 1;
+        width: 90%;
+        grid-column: 1 / -1;
         display: flex;
         flex-direction: column;
-        justify-content: center
+        align-items: center;
+        margin-top: 2vw;
+        color: var(--BRANCO);
     }
-    .container-form2{
-        display: grid;
+
+    .container-logo-redes {
         width: 100%;
-        display: grid;
-    }
-    .txt-form {
-        width: 83%;
-    }
-    .container-redes h3 {
-        font-size: calc(12px + 450 * ((100vw - 300px) / (1600 - 300)));
-    }
-    .container-redes {
-        display: grid;
-        padding-top: 7%;
-        /* margin-left: 10%; */
-        /* margin-top: 1em; */
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
     }
 
-    .container-logo-redes{
-        padding-top: 30%;
-        font-size: calc(12px + 6 * ((100vw - 300px) / (1600 - 300)));
-        display: grid;
-        align-items: end;
-
-    }
     .container-logo-redes img {
-        padding-top: 10%;
+        padding: 0 5vw;
     }
-    footer {
-        height: 100%;
-        margin-right: 0;
+
+    .container-redes>h3{
+        justify-items: center;
+        font-size: calc(20px + 10 * ((100vw - 300px) / (1600 - 300)));
     }
+
+    .midia {
+        grid-row: 2;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container-atendimento{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        margin-top: 2vw;
+        width: 90%;
+        color: var(--BRANCO);
+        font-size: calc(12px + 6 * ((100vw - 300px) / (1600 - 300)));
+        line-height: 22px;
+    }
+
+    .container-atendimento>h3{ 
+        padding: 0;
+        font-size: calc(20px + 10 * ((100vw - 300px) / (1600 - 300)));
+    }
+
+    .container-atendimento>p{
+        padding-bottom: 2vh;
+        text-decoration: underline var(--BRANCO);
+    }
+
+    .container-atendimento a {
+        color: white;
+        text-decoration: underline var(--BRANCO);
+    }
+
+    .container-form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 2vh;
+        width: 90%;
+        color: var(--BRANCO);
+    }
+
+    .container-form>h3{
+        padding-bottom: 1vh;
+        justify-self: center;
+        font-size: calc(20px + 10 * ((100vw - 300px) / (1600 - 300)));
+    }
+
+    .header-form {
+        grid-row: 1;
+        grid-column: 1 / -1;
+        justify-content: start;
+    }
+
+    .formulario-parte1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .container-form1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 1vh;
+    }
+
+    #label-email {
+        margin-top: 1vh;
+    }
+
+    .formulario-parte2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        grid-row: 2;
+        grid-column: 2;
+        margin-right: 2vw;
+    }
+
+    .container-form2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 1vh;
+    }
+
     #button-form {
-        height: 25px;
-        width: 84%;
+        margin-top: 1vh;
+        color: var(--VERDE);
+        width: 100px;
+        border-radius: 3px;
     }
-    .container-atendimento p {
+
+    #button-form:hover{
+        background-color: var(--AMARELO);
+        color: var(--BRANCO);
+    }
+
+    .linha2 {
+        background-color: var(--NUDE);
+        grid-row: 2;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         text-align: center;
     }
-    .container-atendimento {
-        margin-top: 2%;
-        display: grid;
-        align-items: end;
-        font-size: calc(12px + 240 * ((100vw - 300px) / (1600 - 300)))
+
+    .linha2 h1 {
+        font-family: 'Zen Old Mincho', serif;
+        color: var(--AMARELO);
+    }
+
+    .linha2 p {
+        color: var(--VERDE);
     }
     
 }
