--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,25 @@ body {
     text-shadow: 1px 1px 1px var(--NUDE);
 }
 
+@media screen and (max-width: 740px) {
+    .container-inicial {
+        flex-direction: column;
+        margin: 3vw 0;
+    }
+
+    .logo {
+        margin: 0;
+    }
+
+    .container-texto {
+        width: 80%;
+        margin: 3vh 0;
+    }
+
+    .container-texto p {
+        text-align: center;
+    }
+}
 
 /* CONTAINER QUEM SOMOS */
 .container-quem-somos {
@@ -142,11 +161,12 @@ body {
 }
 
 .quem-somos {
-    display: flex;
+    display: grid;
+    grid-template-columns: 25% 75%;
     width: 95%;
-    justify-content: space-around;
     align-items: center;
 }
+
 .quem-somos p {
     display: grid;
     justify-items: center;
@@ -162,6 +182,18 @@ body {
 }
 
 
+@media screen and (max-width: 740px) {
+    .quem-somos {
+        width: 90%;
+        grid-template-columns: 100%;
+        grid-template-rows: 20% 80%;
+    }
+
+    .quem-somos p {
+        text-align: center;
+        margin: 3vh 0;
+    }
+}
 
 /* CONTAINER PRODUTOS */
 
@@ -182,7 +214,6 @@ body {
 
 .titulo-header {
     margin-left: 1.5vw;
-    /* border-bottom: var(--NUDE); */
 }
 
 .titulo-header h1 {
@@ -287,13 +318,14 @@ footer{
     justify-content: space-around;
     flex-wrap: wrap;
     margin-left: 1vw;
-    margin-top: 2vw;
+    margin-top: 1vw;
 }
 
 .container-redes>h3{
     margin-left: 1vw;
     padding-bottom: 2vh;
     justify-self: center;
+    font-size: calc(15px + 8 * ((100vw - 300px) / (1600 - 300)));
 }
 
 .container-atendimento{
@@ -301,19 +333,19 @@ footer{
     flex-direction: column;
     align-items: flex-start;
     margin-top: 2vw;
-    margin-left: 5vw;
-    width: 20%;
+    /* margin-left: 5vw; */
     color: var(--BRANCO);
-    font-size: calc(12px + 6 * ((100vw - 300px) / (1600 - 300)))
+    line-height: 25px;
 }
 
 .container-atendimento>h3{
     padding-bottom: 2vh;
+    font-size: calc(15px + 8 * ((100vw - 300px) / (1600 - 300)));
 }
 
-.container-atendimento>p{
-    padding-bottom: 2vh;
-    text-decoration: underline var(--BRANCO)
+.container-atendimento p{
+    text-decoration: underline var(--BRANCO);
+    font-size: calc(12px + 6 * ((100vw - 300px) / (1600 - 300)));
 }
 
 .container-atendimento a {
@@ -321,27 +353,25 @@ footer{
     text-decoration: underline var(--BRANCO)
 }
 
+.midia {
+    display: grid;
+    grid-template-columns: 30% 70%;
+}
+
 .container-form{
-    /* display: flex;
-    flex-direction: column; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 35px calc(100% - 35px - 3vh);
-    margin-top: 2vh;
-    width: 50%;
+    margin-top: 2vw;
+    /* width: 50%; */
     color: var(--BRANCO);
 }
 
 .container-form>h3{
     padding-bottom: 1vh;
     justify-self: center;
+    font-size: calc(15px + 8 * ((100vw - 300px) / (1600 - 300)));
 }
-
-/* .formulario{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-} */
 
 .header-form {
     grid-row: 1;
@@ -355,6 +385,7 @@ footer{
     align-items: center;
     grid-row: 2;
     grid-column: 1;
+    font-size: calc(12px + 6 * ((100vw - 300px) / (1600 - 300)));
 }
 
 .container-form1 {
@@ -374,6 +405,8 @@ footer{
     grid-row: 2;
     grid-column: 2;
     margin-right: 2vw;
+    font-size: calc(12px + 6 * ((100vw - 300px) / (1600 - 300)));
+    
 }
 
 .container-form2 {
@@ -414,9 +447,8 @@ footer{
 
 /* @MEDIA RESPONSIVIDADE */
 
-@media screen and (max-width: 740px){
+@media screen and (max-width: 740px) {
     body {
-        display: grid;
         grid-template-rows: 60px 1fr 600px;
         max-width: 100vw;
     }
@@ -424,12 +456,10 @@ footer{
    /* FOOTER */
 
     footer{ 
-        display: grid;
-        grid-template-rows: 85% 15%;
+        grid-template-rows: 90% 10%;
     }
 
     .linha1 {
-        grid-row: 1;
         display: grid;
         place-items: center;
         grid-template-rows: repeat(20px, 1fr);
@@ -440,27 +470,28 @@ footer{
         grid-row: 1;
         width: 90%;
         grid-column: 1 / -1;
+        margin-top: 1vh;
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 2vw;
         color: var(--BRANCO);
+    }
+
+    .container-redes>h3 {
+        margin-left: 0;
+        padding-bottom: 1vh;
+        text-align: center;
+        font-size: calc(20px + 10 * ((100vw - 300px) / (1600 - 300)));
     }
 
     .container-logo-redes {
         width: 100%;
-        display: flex;
         flex-wrap: nowrap;
         justify-content: center;
     }
 
     .container-logo-redes img {
         padding: 0 5vw;
-    }
-
-    .container-redes>h3{
-        justify-items: center;
-        font-size: calc(20px + 10 * ((100vw - 300px) / (1600 - 300)));
     }
 
     .midia {
@@ -471,20 +502,18 @@ footer{
         align-items: center;
     }
 
-    .container-atendimento{
-        display: flex;
-        flex-direction: column;
+    .container-atendimento {
         align-items: center;
-        justify-items: center;
-        margin-top: 2vw;
+        margin: 2vw 0;
         width: 90%;
         color: var(--BRANCO);
         font-size: calc(12px + 6 * ((100vw - 300px) / (1600 - 300)));
-        line-height: 22px;
+        line-height: 25px;
     }
 
     .container-atendimento>h3{ 
         padding: 0;
+        margin: 1vh 0;
         font-size: calc(20px + 10 * ((100vw - 300px) / (1600 - 300)));
     }
 
@@ -539,12 +568,7 @@ footer{
     }
 
     .formulario-parte2 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        grid-row: 2;
-        grid-column: 2;
-        margin-right: 2vw;
+        margin-right: 0;
     }
 
     .container-form2 {
@@ -573,15 +597,18 @@ footer{
         flex-direction: column;
         align-items: center;
         text-align: center;
+        justify-content: flex-end;
     }
 
     .linha2 h1 {
         font-family: 'Zen Old Mincho', serif;
         color: var(--AMARELO);
+        font-size: calc(20px + 10 * ((100vw - 300px) / (1600 - 300)));
     }
 
     .linha2 p {
         color: var(--VERDE);
+        font-size: calc(14px + 6 * ((100vw - 300px) / (1600 - 300)));
     }
     
 }
